chore(crypto): CRP-2721 Add TS linting to CI (#42)
Linting configurations were added in #31 but the linting step did not run in CI. This change now executes eslint during the CI builds.

--- a/.github/workflows/encrypted-maps-example.yml
+++ b/.github/workflows/encrypted-maps-example.yml
@@ -35,6 +35,7 @@ jobs:
           pushd sdk/ic_vetkd_sdk_encrypted_maps_example
           npm install
           npm test
+          npm run lint
   encrypted-maps-example-linux:
     runs-on: ubuntu-24.04
     steps:
@@ -51,3 +52,4 @@ jobs:
           pushd sdk/ic_vetkd_sdk_encrypted_maps_example
           npm install
           npm test
+          npm run lint
