--- a/.github/workflows/key-manager-example.yml
+++ b/.github/workflows/key-manager-example.yml
@@ -38,6 +38,7 @@ jobs:
           pushd sdk/ic_vetkd_sdk_key_manager_example
           npm install
           npm test
+          npm run lint
   key-manager-example-linux:
     runs-on: ubuntu-24.04
     steps:
@@ -54,3 +55,4 @@ jobs:
           pushd sdk/ic_vetkd_sdk_key_manager_example
           npm install
           npm test
+          npm run lint
