feat: CRP-2746 use javascript utils in encrypted maps and fix its dependents (#52)
Compiled artifacts using WASM:
```
dist/index.html                                      0.48 kB │ gzip:   0.30 kB
dist/assets/ic_vetkd_cdk_utils_bg-DvSDd4rZ.wasm    125.17 kB
dist/bundle.css                                     68.02 kB │ gzip:  11.78 kB
dist/assets/index-CbWjwMQl.js                    1,253.67 kB │ gzip: 288.53 kB
```

Compiled artifacts using JS:
```
dist/index.html                    0.48 kB │ gzip:   0.30 kB
dist/bundle.css                   68.02 kB │ gzip:  11.78 kB
dist/assets/index-C3wHOvXs.js  1,053.39 kB │ gzip: 275.94 kB
```

--- a/sdk/ic_vetkd_sdk_encrypted_maps_example/package.json
+++ b/sdk/ic_vetkd_sdk_encrypted_maps_example/package.json
@@ -8,13 +8,11 @@
     "main": "dist/index.umd.js",
     "module": "dist/index.es5.js",
     "typings": "dist/types/index.d.ts",
-    "peerDependencies": {
-        "ic_vetkd_sdk_encrypted_maps": "^0.1.0"
-    },
     "dependencies": {
         "@dfinity/agent": "^2.3.0",
         "@dfinity/candid": "^2.3.0",
         "@dfinity/principal": "^2.3.0",
+        "ic_vetkd_sdk_encrypted_maps": "^0.1.0",
         "vite-plugin-top-level-await": "^1.4.4",
         "vite-plugin-wasm": "^3.4.1"
     },
