--- a/sdk/ic_vetkd_sdk_encrypted_maps/package.json
+++ b/sdk/ic_vetkd_sdk_encrypted_maps/package.json
@@ -9,7 +9,7 @@
   "module": "dist/index.es5.js",
   "typings": "dist/types/index.d.ts",
   "peerDependencies": {
-    "ic-vetkd-cdk-utils": "^0.1.0"
+    "ic_vetkd_sdk_utils": "^0.1.0"
   },
   "dependencies": {
     "@dfinity/principal": "^2.3.0",
