--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     paths:
       - cdk/**
+      - Cargo.toml
+      - Cargo.lock
       - .github/workflows/provision-linux.sh
       - .github/workflows/provision-darwin.sh
 concurrency:
