--- a/.github/workflows/examples-password-manager-with-metadata.yml
+++ b/.github/workflows/examples-password-manager-with-metadata.yml
@@ -11,6 +11,8 @@ on:
       - sdk/ic_vetkd_sdk_encrypted_maps/**
       - sdk/ic_vetkd_sdk_encrypted_maps_example/**
       - sdk/ic_vetkd_sdk_utils/**
+      - package.json
+      - package-lock.json
       - .github/workflows/provision-darwin.sh
       - .github/workflows/provision-linux.sh
       - .github/workflows/examples-password-manager-with-metadata.yml
