--- a/.github/workflows/sdk_encrypted_maps.yml
+++ b/.github/workflows/sdk_encrypted_maps.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - sdk/ic_sdk_encrypted_maps/**
       - sdk/ic_sdk_utils/**
+      - package.json
+      - package-lock.json
       - .github/workflows/sdk_encrypted_maps.yml
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
