--- a/.github/workflows/sdk_key_manager.yml
+++ b/.github/workflows/sdk_key_manager.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - sdk/ic_sdk_key_manager/**
       - sdk/ic_sdk_utils/**
+      - package.json
+      - package-lock.json
       - .github/workflows/sdk_key_manager.yml
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
