--- a/.github/workflows/sdk_utils.yml
+++ b/.github/workflows/sdk_utils.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     paths:
       - sdk/ic_vetkd_sdk_utils/**
+      - package.json
+      - package-lock.json
       - .github/workflows/sdk_utils.yml
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
