--- a/examples/password_manager/frontend/package.json
+++ b/examples/password_manager/frontend/package.json
@@ -17,9 +17,7 @@
     "daisyui": "^4.12.23",
     "svelte": "^4.2.19",
     "vite": "^5.4.14",
-    "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-top-level-await": "^1.4.4",
-    "vite-plugin-wasm": "^3.4.1"
+    "vite-plugin-environment": "^1.1.3"
   },
   "dependencies": {
     "@dfinity/agent": "^2.3.0",
