--- a/examples/password_manager_with_metadata/frontend/package.json
+++ b/examples/password_manager_with_metadata/frontend/package.json
@@ -28,9 +28,7 @@
         "vite": "^5.4.14",
         "vite-plugin-compression": "^0.5.1",
         "vite-plugin-environment": "^1.1.3",
-        "vite-plugin-eslint": "^1.8.1",
-        "vite-plugin-top-level-await": "^1.4.4",
-        "vite-plugin-wasm": "^3.4.1"
+        "vite-plugin-eslint": "^1.8.1"
     },
     "dependencies": {
         "@dfinity/agent": "^2.3.0",
