--- a/sdk/ic_vetkd_sdk_encrypted_maps_example/package.json
+++ b/sdk/ic_vetkd_sdk_encrypted_maps_example/package.json
@@ -12,9 +12,7 @@
         "@dfinity/agent": "^2.3.0",
         "@dfinity/candid": "^2.3.0",
         "@dfinity/principal": "^2.3.0",
-        "ic_vetkd_sdk_encrypted_maps": "^0.1.0",
-        "vite-plugin-top-level-await": "^1.4.4",
-        "vite-plugin-wasm": "^3.4.1"
+        "ic_vetkd_sdk_encrypted_maps": "^0.1.0"
     },
     "devDependencies": {
         "@dfinity/identity": "^2.2.0",
@@ -23,8 +21,8 @@
         "eslint": "^9.22",
         "fake-indexeddb": "^6.0.0",
         "isomorphic-fetch": "3.0.0",
-        "typescript-eslint": "8.27",
         "typescript": "^5.7.3",
+        "typescript-eslint": "8.27",
         "vite": "^6.1.2",
         "vitest": "^3.0.5"
     },
