--- a/sdk/ic_vetkd_sdk_key_manager/package.json
+++ b/sdk/ic_vetkd_sdk_key_manager/package.json
@@ -8,21 +8,21 @@
     "main": "dist/index.umd.js",
     "module": "dist/index.es5.js",
     "typings": "dist/types/index.d.ts",
-    "peerDependencies": {
-        "ic-vetkd-cdk-utils": "^0.1.0"
-    },
     "license": "Apache-2.0",
     "dependencies": {
         "@dfinity/principal": "^2.3.0"
     },
     "devDependencies": {
-        "eslint": "^9.22.0",
         "@eslint/js": "^9.22.0",
+        "eslint": "^9.22.0",
         "typescript": "^5.7.3",
         "typescript-eslint": "8.27"
     },
     "scripts": {
         "build": "tsc",
         "lint": "eslint"
+    },
+    "peerDependencies": {
+        "ic_vetkd_sdk_utils": "^0.1.0"
     }
 }
