chore: CRP-2742 add prettier and Svelte linting (#49)
* Adds linting workflows to both password manager examples.
* Adds prettier capabilities to all packages.
* Adds formats password manager with metadata.
* Fixes Svelte lints in both password manager examples.

--- a/.github/workflows/examples-password-manager.yml
+++ b/.github/workflows/examples-password-manager.yml
@@ -29,8 +29,11 @@ jobs:
           bash .github/workflows/provision-darwin.sh
       - name: Deploy Password Manager Darwin
         run: |
+          set -eExuo pipefail
           pushd examples/password_manager
           ./deploy_locally.sh
+          cd frontend
+          npm run lint
   examples-password-manager-linux:
     runs-on: ubuntu-24.04
     steps:
@@ -39,5 +42,8 @@ jobs:
         run: bash .github/workflows/provision-linux.sh
       - name: Deploy Password Manager Linux
         run: |
+          set -eExuo pipefail
           pushd examples/password_manager
           ./deploy_locally.sh
+          cd frontend
+          npm run lint
