--- a/.github/workflows/examples-password-manager-with-metadata.yml
+++ b/.github/workflows/examples-password-manager-with-metadata.yml
@@ -29,8 +29,11 @@ jobs:
           bash .github/workflows/provision-darwin.sh
       - name: Deploy Password Manager With Metadata Darwin
         run: |
-          pushd examples/password_manager_with_metadata
+          set -eExuo pipefail
+          cd examples/password_manager_with_metadata
           ./deploy_locally.sh
+          cd frontend
+          npm run lint
   examples-password-manager-with-metadata-linux:
     runs-on: ubuntu-24.04
     steps:
@@ -39,5 +42,8 @@ jobs:
         run: bash .github/workflows/provision-linux.sh
       - name: Deploy Password Manager With Metadata Linux
         run: |
-          pushd examples/password_manager_with_metadata
+          set -eExuo pipefail
+          cd examples/password_manager_with_metadata
           ./deploy_locally.sh
+          cd frontend
+          npm run lint
