--- a/sdk/ic_vetkd_sdk_encrypted_maps/package.json
+++ b/sdk/ic_vetkd_sdk_encrypted_maps/package.json
@@ -18,11 +18,15 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
+    "eslint-plugin-prettier": "^5.2.5",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
   "scripts": {
     "build": "tsc",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prettier": "prettier --write .",
+    "prettier-check": "prettier --check ."
   }
 }
