--- a/sdk/ic_vetkd_sdk_encrypted_maps_example/package.json
+++ b/sdk/ic_vetkd_sdk_encrypted_maps_example/package.json
@@ -19,8 +19,10 @@
         "@eslint/js": "^9.22.0",
         "@vitest/coverage-v8": "^3.0.5",
         "eslint": "^9.22",
+        "eslint-plugin-prettier": "^5.2.5",
         "fake-indexeddb": "^6.0.0",
         "isomorphic-fetch": "3.0.0",
+        "prettier": "^3.5.3",
         "typescript": "^5.7.3",
         "typescript-eslint": "8.27",
         "vite": "^6.1.2",
@@ -29,7 +31,9 @@
     "scripts": {
         "build": "tsc && vite build",
         "coverage": "vitest run --coverage",
-        "test": "vitest",
-        "lint": "eslint"
+        "lint": "eslint",
+        "prettier": "prettier --write .",
+        "prettier-check": "prettier --check .",
+        "test": "vitest"
     }
 }
