--- a/sdk/ic_vetkd_sdk_key_manager/package.json
+++ b/sdk/ic_vetkd_sdk_key_manager/package.json
@@ -15,12 +15,16 @@
     "devDependencies": {
         "@eslint/js": "^9.22.0",
         "eslint": "^9.22.0",
+        "eslint-plugin-prettier": "^5.2.5",
+        "prettier": "^3.5.3",
         "typescript": "^5.7.3",
         "typescript-eslint": "8.27"
     },
     "scripts": {
         "build": "tsc",
-        "lint": "eslint"
+        "lint": "eslint",
+        "prettier": "prettier --write .",
+        "prettier-check": "prettier --check ."
     },
     "peerDependencies": {
         "ic_vetkd_sdk_utils": "^0.1.0"
