--- a/sdk/ic_vetkd_sdk_key_manager_example/package.json
+++ b/sdk/ic_vetkd_sdk_key_manager_example/package.json
@@ -23,8 +23,10 @@
     "@types/isomorphic-fetch": "^0.0.39",
     "@vitest/coverage-v8": "^3.0.5",
     "eslint": "^9.22.0",
+    "eslint-plugin-prettier": "^5.2.5",
     "happy-dom": "^17.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "8.27",
     "vite": "^6.1.2",
@@ -33,7 +35,9 @@
   "scripts": {
     "build": "tsc && vite build",
     "coverage": "vitest run --coverage",
-    "test": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prettier": "prettier --write .",
+    "prettier-check": "prettier --check .",
+    "test": "vitest"
   }
 }
