--- a/sdk/ic_vetkd_sdk_utils/package.json
+++ b/sdk/ic_vetkd_sdk_utils/package.json
@@ -18,13 +18,17 @@
         "@eslint/js": "^9.22.0",
         "@jest/globals": "^29.7.0",
         "eslint": "^9.22.0",
+        "eslint-plugin-prettier": "^5.2.5",
         "jest": "^29.7.0",
+        "prettier": "^3.5.3",
         "typescript": "^5.7.3",
         "typescript-eslint": "8.27"
     },
     "scripts": {
         "build": "tsc",
-        "test": "jest",
-        "lint": "eslint"
+        "lint": "eslint",
+        "prettier": "prettier --write .",
+        "prettier-check": "prettier --check .",
+        "test": "jest"
     }
 }
