--- a/examples/password_manager_with_metadata/frontend/package.json
+++ b/examples/password_manager_with_metadata/frontend/package.json
@@ -21,6 +21,7 @@
         "@rollup/plugin-typescript": "^12.1.2",
         "@tailwindcss/postcss": "^4.0.6",
         "@tailwindcss/vite": "^4.0.0",
+        "@tsconfig/svelte": "^5.0.4",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.22.0",
         "eslint-config-prettier": "^10.1.1",
