--- a/.github/workflows/examples-password-manager-with-metadata.yml
+++ b/.github/workflows/examples-password-manager-with-metadata.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - examples/password_manager_with_metadata/**
       - backend/**
+      - Cargo.toml
+      - Cargo.lock
       - frontend/ic_vetkeys/**
       - package.json
       - package-lock.json
