--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "backend/canisters/ic_vetkeys_manager_canister",
     "backend/canisters/ic_vetkeys_encrypted_maps_canister",
     "backend/ic_vetkeys_test_utils",
+    "examples/basic_ibe/backend",
     "examples/password_manager_with_metadata/backend"
 ]
 resolver = "2"
@@ -31,6 +32,7 @@ rand_chacha = "0.9.0"
 serde = "1.0.217"
 serde_bytes = "0.11.15"
 serde_cbor = "0.11.2"
+serde_with = "3.11.0"
 
 [profile.release]
 lto = true
