--- a/examples/password_manager_with_metadata/backend/Makefile
+++ b/examples/password_manager_with_metadata/backend/Makefile
@@ -1,3 +1,6 @@
+
+ROOT_DIR := $(shell git rev-parse --show-toplevel)
+
 .PHONY: compile-wasm
 .SILENT: compile-wasm
 compile-wasm:
@@ -6,7 +9,7 @@ compile-wasm:
 .PHONY: extract-candid
 .SILENT: extract-candid
 extract-candid: compile-wasm
-	candid-extractor ../../../target/wasm32-unknown-unknown/release/ic_vetkd_example_password_manager_with_metadata_backend.wasm > backend.did
+	candid-extractor $(ROOT_DIR)/target/wasm32-unknown-unknown/release/ic_vetkd_example_password_manager_with_metadata_backend.wasm > backend.did
 
 .PHONY: compile-wasm-test
 .SILENT: compile-wasm-test
@@ -20,7 +23,7 @@ deploy-test: compile-wasm-test
 	dfx canister create password_manager_with_metadata && \
 	dfx build chainkey_testing_canister && \
 	dfx canister install --upgrade-unchanged --mode auto chainkey_testing_canister && \
-	dfx canister install --upgrade-unchanged --mode auto --wasm ../../../target/wasm32-unknown-unknown/release/ic_vetkd_example_password_manager_with_metadata_backend.wasm password_manager_with_metadata
+	dfx canister install --upgrade-unchanged --mode auto --wasm $(ROOT_DIR)/target/wasm32-unknown-unknown/release/ic_vetkd_example_password_manager_with_metadata_backend.wasm password_manager_with_metadata
 
 .PHONY: mock
 .SILENT: mock
