chore: CRP-2677 improve frontend docs (#70)

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
         "examples/basic_ibe/frontend",
         "examples/password_manager/frontend",
         "examples/password_manager_with_metadata/frontend"
-    ]
+    ],
+    "scripts": {
+        "build": "npm run build --workspaces --if-present; npm run bundle --workspaces --if-present"
+    }
 }
