--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -32,6 +32,7 @@
         "fake-indexeddb": "^6.0.0",
         "isomorphic-fetch": "3.0.0",
         "prettier": "^3.5.3",
+        "typedoc": "^0.28.3",
         "typescript": "^5.7.3",
         "typescript-eslint": "8.27",
         "vite": "^6.1.3",
@@ -42,6 +43,7 @@
         "build": "tsc && vite build",
         "coverage": "vitest run --coverage",
         "lint": "eslint",
+        "make:docs": "mkdir -p $(git rev-parse --show-toplevel)/docs/tools && typedoc --out $(git rev-parse --show-toplevel)/docs",
         "prettier": "prettier --write .",
         "prettier-check": "prettier --check .",
         "test": "vitest"
