--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "backend/rs/canisters/ic_vetkeys_encrypted_maps_canister",
     "backend/rs/canisters/ic_vetkeys_manager_canister",
     "examples/basic_ibe/backend",
+    "examples/basic_timelock_ibe/backend",
     "examples/password_manager_with_metadata/backend"
 ]
 resolver = "2"
