--- a/examples/password_manager/frontend/package.json
+++ b/examples/password_manager/frontend/package.json
@@ -18,6 +18,9 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@tsconfig/svelte": "^5.0.4",
     "daisyui": "^4.12.23",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-svelte": "^3.5.1",
+    "globals": "^16.0.0",
     "svelte": "^4.2.19",
     "vite": "^5.4.18",
     "vite-plugin-environment": "^1.1.3"
