chore: CRP-2742 add prettier and linting to `ic_vetkeys` (#81)
Formats the code and applies several non-functional changes to fix linting errors.

--- a/frontend/ic_vetkeys/tsconfig.json
+++ b/frontend/ic_vetkeys/tsconfig.json
@@ -20,11 +20,8 @@
     "noUncheckedSideEffectImports": true,
   },
   "include": [
-    "src"
-  ],
-  "exclude": [
+    "src",
+    "test",
     "**/*.test.ts",
-    "**/*.test.tsx",
-    "test", "tests"
-  ]
+  ],
 }
