--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -8,11 +8,11 @@
     "exports": {
         ".": {
             "import": "./dist/lib/index.es.js",
-            "types": "./dist/types/index.d.ts"
+            "types": "./dist/types/src/index.d.ts"
         },
         "./tools": {
-            "import": "./dist/lib/tools/index.es.js",
-            "types": "./dist/types/tools/index.d.ts"
+            "import": "./dist/lib/tools.es.js",
+            "types": "./dist/types/src/tools/index.d.ts"
         }
     },
     "module": "dist/lib/index.es.js",
@@ -28,7 +28,7 @@
         "@eslint/js": "^9.22.0",
         "@vitest/coverage-v8": "^3.0.5",
         "eslint": "^9.22",
-        "eslint-plugin-prettier": "^5.2.5",
+        "eslint-plugin-prettier": "^5.2.6",
         "fake-indexeddb": "^6.0.0",
         "isomorphic-fetch": "3.0.0",
         "prettier": "^3.5.3",
