--- a/.github/workflows/backend-rust.yml
+++ b/.github/workflows/backend-rust.yml
@@ -1,31 +1,20 @@
-name: Backend CI
+name: Backend CI Rust
 on:
   push:
     branches:
       - main
   pull_request:
     paths:
-      - backend/**
+      - backend/rs/**
       - Cargo.toml
       - Cargo.lock
       - .github/workflows/provision-linux.sh
       - .github/workflows/provision-darwin.sh
-      - .github/workflows/backend.yml
+      - .github/workflows/backend-rust.yml
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  cargo-clippy-backend-linux:
-    runs-on: ubuntu-24.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: Provision Linux
-        run: bash .github/workflows/provision-linux.sh
-      - name: Run Clippy Linux
-        run: |
-          set -eExuo pipefail
-          export CARGO_TERM_COLOR=always # ensure output has colors
-          cargo clippy -- -Dwarnings
   cargo-test-backend-linux:
     runs-on: ubuntu-24.04
     steps:
