--- a/examples/password_manager_with_metadata/frontend/package.json
+++ b/examples/password_manager_with_metadata/frontend/package.json
@@ -13,9 +13,6 @@
         "prettier-check": "prettier --check .",
         "preview": "vite preview"
     },
-    "peerDependencies": {
-        "ic_vetkeys": "^0.1.0"
-    },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
         "@rollup/plugin-typescript": "^12.1.2",
@@ -52,5 +49,8 @@
         "svelte-spa-router": "^4.0.1",
         "tailwindcss": "^3.0.17",
         "typewriter-editor": "^0.9.4"
+    },
+    "peerDependencies": {
+        "@dfinity/vetkeys": "^0.1.0"
     }
 }
