--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -45,9 +45,13 @@
             "import": "./dist/lib/index.es.js",
             "types": "./dist/types/src/index.d.ts"
         },
-        "./tools": {
-            "import": "./dist/lib/tools.es.js",
-            "types": "./dist/types/src/tools/index.d.ts"
+        "./key_manager": {
+            "import": "./dist/lib/key_manager.es.js",
+            "types": "./dist/types/src/key_manager/index.d.ts"
+        },
+        "./encrypted_maps": {
+            "import": "./dist/lib/encrypted_maps.es.js",
+            "types": "./dist/types/src/encrypted_maps/index.d.ts"
         }
     },
     "module": "dist/lib/index.es.js",
@@ -78,7 +82,7 @@
         "build": "tsc && vite build",
         "coverage": "npm run test:deploy_all && export $(cat .test1.env .test2.env | xargs) && vitest run --coverage",
         "lint": "eslint",
-        "make:docs": "mkdir -p $(git rev-parse --show-toplevel)/docs/tools && typedoc --out $(git rev-parse --show-toplevel)/docs",
+        "make:docs": "mkdir -p $(git rev-parse --show-toplevel)/docs/key_manager && mkdir -p $(git rev-parse --show-toplevel)/docs/encrypted_maps && typedoc --out $(git rev-parse --show-toplevel)/docs",
         "prettier": "prettier --write .",
         "prettier-check": "prettier --check .",
         "test_utils": "vitest utils",
