--- a/backend/rs/ic_vetkeys_test_utils/Cargo.toml
+++ b/backend/rs/ic_vetkeys_test_utils/Cargo.toml
@@ -14,6 +14,13 @@ crate-type = ["lib"]
 anyhow = { workspace = true }
 candid = { workspace = true }
 hex = { workspace = true }
+ic_bls12_381 = { version = "0.10.1", default-features = false, features = [
+    "groups",
+    "pairings",
+    "alloc",
+    "experimental",
+    "zeroize",
+] }
 ic-stable-structures = { workspace = true }
 ic-vetkeys = { path = "../ic_vetkeys" }
 lazy_static = { workspace = true }
@@ -21,3 +28,4 @@ rand = { workspace = true }
 rand_chacha = { workspace = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
+sha2 = "0.10.9"
