--- a/examples/basic_timelock_ibe/backend/Cargo.toml
+++ b/examples/basic_timelock_ibe/backend/Cargo.toml
@@ -17,8 +17,8 @@ getrandom = { version = "0.2", features = ["custom"]}
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 ic-cdk-timers = "0.11.0"
+ic-dummy-getrandom-for-wasm = { workspace = true }
 ic-stable-structures = { workspace = true }
-ic-vetkd-utils = { version = "0.1.0", git = "https://github.com/dfinity/ic.git", default-features = false }
 ic-vetkeys = { path = "../../../backend/rs/ic_vetkeys" }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
