--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ hex = "0.4.3"
 ic-cdk = "0.17.1"
 ic-cdk-macros = "0.17.1"
 ic-stable-structures = "0.6.8"
-ic-vetkd-utils = { version = "0.1.0", git = "https://github.com/dfinity/ic.git" }
 lazy_static = "1.5.0"
 pocket-ic = "9.0.0"
-rand = "0.9.0"
-rand_chacha = "0.9.0"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
 serde = "1.0.217"
 serde_bytes = "0.11.15"
 serde_cbor = "0.11.2"
 serde_with = "3.11.0"
+ic-dummy-getrandom-for-wasm = "0.1.0"
 
 [profile.release]
 lto = true
