--- a/backend/rs/canisters/ic_vetkeys_manager_canister/Cargo.toml
+++ b/backend/rs/canisters/ic_vetkeys_manager_canister/Cargo.toml
@@ -15,13 +15,13 @@ crate-type = ["cdylib"]
 candid = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
+ic-dummy-getrandom-for-wasm = { workspace = true }
 ic-stable-structures = { workspace = true }
 ic-vetkeys = { path = "../../ic_vetkeys" }
 serde = { workspace = true }
 
 [dev-dependencies]
 ic-vetkeys-test-utils = { path = "../../ic_vetkeys_test_utils" }
-ic-vetkd-utils = { workspace = true }
 pocket-ic = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
