--- a/examples/password_manager_with_metadata/backend/Cargo.toml
+++ b/examples/password_manager_with_metadata/backend/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["cdylib"]
 candid = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
+ic-dummy-getrandom-for-wasm = { workspace = true }
 ic-stable-structures = { workspace = true }
 ic-vetkeys = { path = "../../../backend/rs/ic_vetkeys" }
 serde = { workspace = true }
