--- a/examples/basic_ibe/frontend/package.json
+++ b/examples/basic_ibe/frontend/package.json
@@ -15,6 +15,7 @@
     "@eslint/js": "^9.24.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "eslint": "^9.24.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.4",
     "vite-plugin-environment": "^1.1.3"
