--- a/.github/workflows/backend-rust.yml
+++ b/.github/workflows/backend-rust.yml
@@ -27,6 +27,7 @@ jobs:
           export CARGO_TERM_COLOR=always # ensure output has colors
           cargo build --release --target wasm32-unknown-unknown -p ic-vetkeys-manager-canister -p ic-vetkeys-encrypted-maps-canister
           cargo test
+          cargo test --doc
   cargo-test-backend-darwin:
     runs-on: macos-15
     steps:
@@ -40,3 +41,4 @@ jobs:
           export CARGO_TERM_COLOR=always # ensure output has colors
           cargo build --release --target wasm32-unknown-unknown -p ic-vetkeys-manager-canister -p ic-vetkeys-encrypted-maps-canister
           cargo test
+          cargo test --doc
