chore: CRP-2796 update Cargo.toml for publishing (#115)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,16 @@ authors = ["The Internet Computer Project Developers"]
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
-description = "Verifiably encrypted threshold key derivation (VetKD) canister development kit (CDK)"
-documentation = "https://crates.io/vetkd_cdk"
+description = "Tools and examples for development with vetKeys on the Internet Computer"
+repository = "https://github.com/dfinity/vetkeys"
+rust-version = "1.75.0"
+documentation = "https://docs.rs/ic-vetkeys"
 
 [workspace.dependencies]
 anyhow = "1.0.95"
 candid = "0.10.2"
 hex = "0.4.3"
-ic-cdk = "0.17.1"
+ic-cdk = "0.17.2"
 ic-cdk-macros = "0.17.1"
 ic-stable-structures = "0.6.8"
 lazy_static = "1.5.0"
