--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@dfinity/vetkeys",
     "version": "0.1.0",
-    "author": "DFINITY Stiftung <sdk@dfinity.org>",
+    "author": "DFINITY Stiftung",
     "description": "JavaScript and TypeScript library to use Internet Computer vetKeys",
     "homepage": "https://internetcomputer.org/docs/building-apps/network-features/encryption/vetkeys",
     "license": "Apache-2.0",
@@ -43,15 +43,15 @@
     "exports": {
         ".": {
             "import": "./dist/lib/index.es.js",
-            "types": "./dist/types/src/index.d.ts"
+            "types": "./dist/types/index.d.ts"
         },
         "./key_manager": {
             "import": "./dist/lib/key_manager.es.js",
-            "types": "./dist/types/src/key_manager/index.d.ts"
+            "types": "./dist/types/key_manager/index.d.ts"
         },
         "./encrypted_maps": {
             "import": "./dist/lib/encrypted_maps.es.js",
-            "types": "./dist/types/src/encrypted_maps/index.d.ts"
+            "types": "./dist/types/encrypted_maps/index.d.ts"
         }
     },
     "module": "dist/lib/index.es.js",
@@ -80,6 +80,7 @@
     },
     "scripts": {
         "build": "tsc && vite build",
+        "prepare": "npm run build",
         "coverage": "npm run test:deploy_all && export $(cat .test1.env .test2.env | xargs) && vitest run --coverage",
         "lint": "eslint",
         "make:docs": "mkdir -p $(git rev-parse --show-toplevel)/docs/key_manager && mkdir -p $(git rev-parse --show-toplevel)/docs/encrypted_maps && typedoc --out $(git rev-parse --show-toplevel)/docs",
