ci: CRP-2795 fix publish frontend workflow by making the package public (#122)

--- a/.github/workflows/publish-frontend.yml
+++ b/.github/workflows/publish-frontend.yml
@@ -44,6 +44,6 @@ jobs:
           npm list
           npm run build
           npm audit
-          npm publish
+          npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
