--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -7,11 +7,11 @@
     "license": "Apache-2.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/dfinity/vetkd-devkit.git",
+        "url": "git+https://github.com/dfinity/vetkeys.git",
         "directory": "frontend/ic_vetkeys"
     },
     "bugs": {
-        "url": "https://github.com/dfinity/vetkd-devkit/issues"
+        "url": "https://github.com/dfinity/vetkeys/issues"
     },
     "keywords": [
         "internet computer",
