--- a/.github/workflows/publish-frontend.yml
+++ b/.github/workflows/publish-frontend.yml
@@ -10,6 +10,9 @@ jobs:
   publish:
     if: startsWith(github.ref, 'refs/tags/frontend/@dfinity/vetkeys/')
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node.js
