feat: CRP-2757 implement a basic Motoko canister using `EncryptedMaps` (#126)

--- a/.github/workflows/backend-motoko.yml
+++ b/.github/workflows/backend-motoko.yml
@@ -33,6 +33,8 @@ jobs:
           mops test
           cd ../canisters/ic_vetkeys_manager_canister
           make test
+          cd ../ic_vetkeys_encrypted_maps_canister
+          make test
   backend-motoko-tests-darwin:
     runs-on: macos-15
     steps:
@@ -49,4 +51,6 @@ jobs:
           mops install
           mops test
           cd ../canisters/ic_vetkeys_manager_canister
+          make test
+          cd ../ic_vetkeys_encrypted_maps_canister
           make test
