chore: CRP-2806 prepare Motoko backend for publishing (#143)
Adapts the Motoko backend folder so that it can be published on
mops.one. In particular:

* Fixes the mops.toml
  * Corrects the syntax for the `keywords`
  * Adds a proper description
* Removes the `repository` keyword because repositories located in
sub-directories are not supported.
* Adds the repository location to the README
* Adds a change log

Also updates the date format in all changelogs to YYYY-MM-DD.

--- a/backend/mo/ic_vetkeys/mops.toml
+++ b/backend/mo/ic_vetkeys/mops.toml
@@ -1,11 +1,16 @@
 [package]
 name = "ic-vetkeys"
 version = "0.1.0"
-description = "IC VetKeys Library"
-repository = "https://github.com/dfinity/vetkd-devkit"
+description = "A set of tools designed to help canister developers integrate vetKeys into their Internet Computer (ICP) applications"
 keywords = [
-  "vetkeys,vetkd,encryption,privacy,signature,BLS,key ",
-  "derivation,IBE"
+  "vetkeys",
+  "vetkd",
+  "encryption",
+  "privacy",
+  "signature",
+  "bls",
+  "key-derivation",
+  "ibe",
 ]
 license = "Apache-2.0"
 
