chore: CRP-2806 prepare new Motoko backend release (#147)
Fixes two broken links in the Motoko backend library README.

Also

sets the repository directly in the mops.toml rather than in the README. This also improves the "Package Quality" score on mops.one.
bumps the version of the Motoko backend library to 0.2.0 to be in line with the Rust backend library.

--- a/backend/mo/ic_vetkeys/mops.toml
+++ b/backend/mo/ic_vetkeys/mops.toml
@@ -1,6 +1,7 @@
 [package]
 name = "ic-vetkeys"
-version = "0.1.0"
+version = "0.2.0"
+repository = "https://github.com/dfinity/vetkeys/backend/mo/ic_vetkeys"
 description = "A set of tools designed to help canister developers integrate vetKeys into their Internet Computer (ICP) applications"
 keywords = [
   "vetkeys",
