--- a/examples/basic_timelock_ibe/backend/Cargo.toml
+++ b/examples/basic_timelock_ibe/backend/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
 name = "ic-vetkd-example-basic-timelock-ibe-backend"
-authors.workspace = true
-description.workspace = true
-documentation.workspace = true
-edition.workspace = true
-version.workspace = true
-license.workspace = true
+authors = ["DFINITY Stiftung"]
+version = "0.1.0"
+edition = "2021"
+license = "Apache-2.0"
+description = "Basic Timelock Identity Based Encryption"
+repository = "https://github.com/dfinity/vetkeys"
+rust-version = "1.75.0"
 
 [lib]
 path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = { workspace = true }
+candid = "0.10.2"
 getrandom = { version = "0.2", features = ["custom"]}
-ic-cdk = { workspace = true }
-ic-cdk-macros = { workspace = true }
+ic-cdk = "0.18.3"
+ic-cdk-macros = "0.18.3"
 ic-cdk-timers = "0.12.0"
-ic-dummy-getrandom-for-wasm = { workspace = true }
-ic-stable-structures = { workspace = true }
-ic-vetkeys = { path = "../../../backend/rs/ic_vetkeys" }
-serde = { workspace = true }
-serde_bytes = { workspace = true }
-serde_cbor = { workspace = true }
-serde_with = { workspace = true }
+ic-dummy-getrandom-for-wasm = "0.1.0"
+ic-stable-structures = "0.6.8"
+ic-vetkeys = "0.2.0"
+serde = "1.0.217"
+serde_bytes = "0.11.15"
+serde_cbor = "0.11.2"
+serde_with = "3.11.0"
