--- a/.github/workflows/examples-basic-ibe.yml
+++ b/.github/workflows/examples-basic-ibe.yml
@@ -19,34 +19,65 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  examples-basic-ibe-darwin:
+  examples-basic-ibe-rust-darwin:
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
       - name: Provision Darwin
         run: |
           bash .github/workflows/provision-darwin.sh
-      - name: Deploy Basic IBE Darwin
+      - name: Deploy Basic IBE Rust Darwin
         run: |
           set -eExuo pipefail
           cargo install candid-extractor
           npm i
-          pushd examples/basic_ibe
-          ./deploy_locally.sh
+          pushd examples/basic_ibe/rust
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
-  examples-basic-ibe-linux:
+  examples-basic-ibe-rust-linux:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Provision Linux
         run: bash .github/workflows/provision-linux.sh
-      - name: Deploy Basic IBE Linux
+      - name: Deploy Basic IBE Rust Linux
         run: |
           set -eExuo pipefail
           cargo install candid-extractor
           npm i
-          pushd examples/basic_ibe
-          ./deploy_locally.sh
+          pushd examples/basic_ibe/rust
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-basic-ibe-motoko-darwin:
+    runs-on: macos-15
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Darwin
+        run: |
+          bash .github/workflows/provision-darwin.sh
+      - name: Deploy Basic IBE Motoko Darwin
+        run: |
+          set -eExuo pipefail
+          cargo install candid-extractor
+          npm i
+          pushd examples/basic_ibe/motoko
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-basic-ibe-motoko-linux:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Linux
+        run: bash .github/workflows/provision-linux.sh
+      - name: Deploy Basic IBE Motoko Linux
+        run: |
+          set -eExuo pipefail
+          cargo install candid-extractor
+          npm i
+          pushd examples/basic_ibe/motoko
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint 
