--- a/examples/basic_ibe/frontend/package.json
+++ b/examples/basic_ibe/frontend/package.json
@@ -5,26 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "npm run build:bindings && vite",
-    "build": "npm run build:bindings && npm run build:deps && tsc && vite build",
+    "build": "npm run build:bindings && tsc && vite build",
     "build:bindings": "cd scripts && ./gen_bindings.sh",
-    "build:deps": "cd ../../../frontend/ic_vetkeys && npm run build",
     "preview": "vite preview",
     "lint": "eslint"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^24.0.4",
     "eslint": "^9.24.0",
     "eslint-plugin-prettier": "^5.4.0",
+    "tslib": "^2.8.1",
     "typescript": "~5.7.2",
     "vite": "^6.3.4",
     "vite-plugin-environment": "^1.1.3"
   },
   "dependencies": {
     "@dfinity/auth-client": "^2.4.1",
-    "@dfinity/principal": "^2.4.1"
-  },
-  "peerDependencies": {
+    "@dfinity/principal": "^2.4.1",
     "@dfinity/vetkeys": "^0.2.0"
   }
 }
