feat: CRP-2763 add a basic BLS signing service example (#94)
Adds a basic BLS signing example where a user can log in and create signatures and also see the signatures she created in the past. Additonally, there is UI to verify a custom signature.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "backend/rs/canisters/ic_vetkeys_encrypted_maps_canister",
     "backend/rs/canisters/ic_vetkeys_manager_canister",
     "backend/rs/canisters/tests",
-    "examples/password_manager_with_metadata/backend"
+    "examples/basic_bls_signing/backend",
+    "examples/password_manager_with_metadata/backend",
 ]
 resolver = "2"
 
