--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "workspaces": [
         "frontend/ic_vetkeys",
+        "examples/basic_bls_signing/frontend",
         "examples/password_manager/frontend",
         "examples/password_manager_with_metadata/frontend"
     ],
