feat: CRP-2844 CRP-2850 add a Motoko backend for password manager w/ metadata and prepare for ICP Ninja (#160)
Also removes the declarations, which are auto-generated from the backend
candid.

--- a/.github/workflows/examples-password-manager-with-metadata.yml
+++ b/.github/workflows/examples-password-manager-with-metadata.yml
@@ -20,7 +20,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  examples-password-manager-with-metadata-darwin:
+  examples-password-manager-with-metadata-rust-darwin:
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -30,11 +30,11 @@ jobs:
       - name: Deploy Password Manager With Metadata Darwin
         run: |
           set -eExuo pipefail
-          cd examples/password_manager_with_metadata
-          ./deploy_locally.sh
+          cd examples/password_manager_with_metadata/rust
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
-  examples-password-manager-with-metadata-linux:
+  examples-password-manager-with-metadata-rust-linux:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,34 @@ jobs:
       - name: Deploy Password Manager With Metadata Linux
         run: |
           set -eExuo pipefail
-          cd examples/password_manager_with_metadata
-          ./deploy_locally.sh
+          cd examples/password_manager_with_metadata/rust
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-password-manager-with-metadata-motoko-darwin:
+    runs-on: macos-15
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Darwin
+        run: |
+          bash .github/workflows/provision-darwin.sh
+      - name: Deploy Password Manager With Metadata Darwin
+        run: |
+          set -eExuo pipefail
+          cd examples/password_manager_with_metadata/motoko
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-password-manager-with-metadata-motoko-linux:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Linux
+        run: bash .github/workflows/provision-linux.sh
+      - name: Deploy Password Manager With Metadata Linux
+        run: |
+          set -eExuo pipefail
+          cd examples/password_manager_with_metadata/motoko
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
