--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "workspaces": [
         "frontend/ic_vetkeys",
         "examples/basic_bls_signing/frontend",
-        "examples/password_manager/frontend",
-        "examples/password_manager_with_metadata/frontend"
+        "examples/password_manager/frontend"
     ],
     "scripts": {
         "build": "npm run build --workspaces --if-present; npm run bundle --workspaces --if-present"
+    },
+    "devDependencies": {
+        "svelte-hmr": "^0.16.0"
     }
 }
