--- a/examples/basic_bls_signing/frontend/package.json
+++ b/examples/basic_bls_signing/frontend/package.json
@@ -4,28 +4,29 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-      "dev": "npm run build:bindings && vite",
-      "build": "npm run build:bindings && npm run build:deps && tsc && vite build",
-      "build:bindings": "cd scripts && ./gen_bindings.sh",
-      "build:deps": "cd ../../../frontend/ic_vetkeys && npm run build",
-      "preview": "vite preview",
-      "lint": "eslint"
+        "dev": "npm run build:bindings && vite",
+        "build": "npm run build:bindings && npm run build:deps && tsc && vite build",
+        "build:bindings": "cd scripts && ./gen_bindings.sh",
+        "build:deps": "cd ../../../frontend/ic_vetkeys && npm run build",
+        "preview": "vite preview",
+        "lint": "eslint"
     },
     "peerDependencies": {
-      "@dfinity/vetkeys": "^0.2.0"
+        "@dfinity/vetkeys": "^0.2.0"
     },
     "devDependencies": {
-      "@eslint/js": "^9.24.0",
-      "@rollup/plugin-typescript": "^12.1.2",
-      "eslint": "^9.24.0",
-      "eslint-plugin-prettier": "^5.4.0",
-      "typescript": "~5.7.2",
-      "vite": "^6.2.0",
-      "vite-plugin-environment": "^1.1.3"
+        "@eslint/js": "^9.24.0",
+        "@rollup/plugin-typescript": "^12.1.2",
+        "eslint": "^9.24.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.0",
+        "tslib": "^2.8.1",
+        "typescript": "~5.7.2",
+        "vite": "^6.2.0",
+        "vite-plugin-environment": "^1.1.3"
     },
     "dependencies": {
-      "@dfinity/auth-client": "^2.4.1",
-      "@dfinity/principal": "^2.4.1"
+        "@dfinity/auth-client": "^2.4.1",
+        "@dfinity/principal": "^2.4.1"
     }
-  }
-  
+}
