--- a/examples/basic_ibe/frontend/package.json
+++ b/examples/basic_ibe/frontend/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^24.0.4",
     "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "tslib": "^2.8.1",
     "typescript": "~5.7.2",
