--- a/examples/password_manager/frontend/package.json
+++ b/examples/password_manager/frontend/package.json
@@ -14,11 +14,15 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
     "@tsconfig/svelte": "^5.0.4",
+    "@typewriter/delta": "^1.2.4",
     "daisyui": "^4.12.23",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-svelte": "^3.5.1",
     "globals": "^16.0.0",
+    "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^4.2.19",
+    "tslib": "^2.8.1",
     "vite": "^5.4.19",
     "vite-plugin-environment": "^1.1.3"
   },
@@ -28,6 +32,7 @@
     "@dfinity/candid": "^2.3.0",
     "@dfinity/identity": "^2.3.0",
     "@dfinity/principal": "^2.3.0",
+    "@popperjs/core": "^2.11.8",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.0",
