--- a/examples/password_manager_with_metadata/frontend/package.json
+++ b/examples/password_manager_with_metadata/frontend/package.json
@@ -4,10 +4,9 @@
     "license": "Apache-2.0",
     "type": "module",
     "scripts": {
-        "build": "npm run build:deps && vite build",
-        "build:deps": "cd ../../../frontend/ic_vetkeys && npm run build",
-        "dev": "vite",
-        "gen-bindings": "cd ../backend && make extract-candid && cd .. && dfx generate password_manager_with_metadata && mv src/declarations/password_manager_with_metadata/* frontend/src/declarations/ && rmdir -p src/declarations/password_manager_with_metadata",
+        "build": "npm run build:bindings && vite build",
+        "dev": "npm run build:bindings && vite",
+        "build:bindings": "cd scripts && ./gen_bindings.sh",
         "lint": "eslint",
         "prettier": "prettier --write .",
         "prettier-check": "prettier --check .",
@@ -19,9 +18,10 @@
         "@tailwindcss/postcss": "^4.0.6",
         "@tailwindcss/vite": "^4.0.0",
         "@tsconfig/svelte": "^5.0.4",
+        "@typewriter/delta": "^1.2.4",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.22.0",
-        "eslint-config-prettier": "^10.1.1",
+        "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.2.5",
         "eslint-plugin-svelte": "^3.3.3",
         "globals": "^16.0.0",
@@ -29,6 +29,7 @@
         "prettier-plugin-svelte": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "rollup-plugin-css-only": "^4.5.2",
+        "tslib": "^2.8.1",
         "typescript-eslint": "^8.26.1",
         "vite": "^5.4.19",
         "vite-plugin-compression": "^0.5.1",
@@ -41,6 +42,7 @@
         "@dfinity/candid": "^2.3.0",
         "@dfinity/identity": "^2.3.0",
         "@dfinity/principal": "^2.3.0",
+        "@dfinity/vetkeys": "^0.2.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.2",
         "daisyui": "^4.12.23",
         "save": "^2.9.0",
@@ -49,8 +51,5 @@
         "svelte-spa-router": "^4.0.1",
         "tailwindcss": "^3.0.17",
         "typewriter-editor": "^0.9.4"
-    },
-    "peerDependencies": {
-        "@dfinity/vetkeys": "^0.2.0"
     }
 }
