--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -65,10 +65,12 @@
     "devDependencies": {
         "@dfinity/identity": "^2.2.0",
         "@eslint/js": "^9.22.0",
+        "@types/node": "^24.0.4",
         "@vitest/coverage-v8": "^3.0.5",
         "eslint": "^9.22",
         "eslint-plugin-prettier": "^5.2.6",
         "fake-indexeddb": "^6.0.0",
+        "happy-dom": "^18.0.1",
         "isomorphic-fetch": "3.0.0",
         "prettier": "^3.5.3",
         "typedoc": "^0.28.3",
