feat: CRP-2844 CRP-2850 add a Motoko password manager backend and prepare to deploy to ICP Ninja (#155)

--- a/.github/workflows/backend-motoko-format-check.yml
+++ b/.github/workflows/backend-motoko-format-check.yml
@@ -24,7 +24,11 @@ jobs:
       - name: Run MOPS Format Check Linux
         run: |
           for d in $(find . -type d -name '.mops' -prune -o -type f -name 'mops.toml' -printf '%h\n'); do
-            cd $d
-            echo "Checking directory: $(pwd)" && mops format --check
-            cd -
+            if [ -d "$d/src" ]; then
+              cd $d
+              echo "Checking directory: $(pwd)" && mops format --check
+              cd -
+            else
+              echo "Skipping directory $d (no src directory inside)"
+            fi
           done
