--- a/.github/workflows/examples-password-manager.yml
+++ b/.github/workflows/examples-password-manager.yml
@@ -20,7 +20,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  examples-password-manager-darwin:
+  examples-password-manager-rust-darwin:
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -31,11 +31,11 @@ jobs:
         run: |
           set -eExuo pipefail
           npm i
-          pushd examples/password_manager
-          ./deploy_locally.sh
+          cd examples/password_manager/rust
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
-  examples-password-manager-linux:
+  examples-password-manager-rust-linux:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -45,7 +45,36 @@ jobs:
         run: |
           set -eExuo pipefail
           npm i
-          pushd examples/password_manager
-          ./deploy_locally.sh
+          cd examples/password_manager/rust
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-password-manager-motoko-darwin:
+    runs-on: macos-15
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Darwin
+        run: |
+          bash .github/workflows/provision-darwin.sh
+      - name: Deploy Password Manager Darwin
+        run: |
+          set -eExuo pipefail
+          npm i
+          cd examples/password_manager/motoko
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-password-manager-motoko-linux:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Linux
+        run: bash .github/workflows/provision-linux.sh
+      - name: Deploy Password Manager Linux
+        run: |
+          set -eExuo pipefail
+          npm i
+          cd examples/password_manager/motoko
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
