--- a/examples/password_manager/frontend/package.json
+++ b/examples/password_manager/frontend/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:deps && vite build",
-    "build:deps": "cd ../../../frontend/ic_vetkeys && npm run build",
+    "build": "vite build",
     "lint": "eslint",
     "prettier": "prettier --write .",
     "prettier-check": "prettier --check .",
@@ -32,6 +31,7 @@
     "@dfinity/candid": "^2.3.0",
     "@dfinity/identity": "^2.3.0",
     "@dfinity/principal": "^2.3.0",
+    "@dfinity/vetkeys": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tailwindcss/postcss": "^4.0.6",
@@ -42,8 +42,5 @@
     "svelte-spa-router": "^4.0.1",
     "tailwindcss": "^3.0.17",
     "typewriter-editor": "^0.9.4"
-  },
-  "peerDependencies": {
-    "@dfinity/vetkeys": "^0.2.0"
   }
 }
