chore: Add cargo fmt check to CI (#185)

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -27,3 +27,4 @@ jobs:
           set -eExuo pipefail
           export CARGO_TERM_COLOR=always # ensure output has colors
           cargo clippy -- -Dwarnings
+          cargo fmt --check
