feat: CRP-2844 CRP-2850 add Motoko backend for BLS signing example and ICP Ninja layout and buttons (#175)

--- a/examples/basic_bls_signing/rust/backend/Makefile
+++ b/examples/basic_bls_signing/rust/backend/Makefile
@@ -1,5 +1,3 @@
-ROOT_DIR := $(shell git rev-parse --show-toplevel)
-
 .PHONY: compile-wasm
 .SILENT: compile-wasm
 compile-wasm:
@@ -8,7 +6,7 @@ compile-wasm:
 .PHONY: extract-candid
 .SILENT: extract-candid
 extract-candid: compile-wasm
-	candid-extractor $(ROOT_DIR)/target/wasm32-unknown-unknown/release/ic_vetkeys_example_basic_bls_signing_backend.wasm > backend.did
+	candid-extractor ../target/wasm32-unknown-unknown/release/ic_vetkeys_example_basic_bls_signing_backend.wasm > backend.did
 
 .PHONY: clean
 .SILENT: clean
