--- a/.github/workflows/examples-basic-bls-signing.yml
+++ b/.github/workflows/examples-basic-bls-signing.yml
@@ -19,34 +19,65 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  examples-basic-bls-signing-darwin:
+  examples-basic-bls-signing-rust-darwin:
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
       - name: Provision Darwin
         run: |
           bash .github/workflows/provision-darwin.sh
-      - name: Deploy Basic BLS Signing Darwin
+      - name: Deploy Basic BLS Signing Rust Darwin
         run: |
           set -eExuo pipefail
           cargo install candid-extractor
           npm i
-          pushd examples/basic_bls_signing
-          ./deploy_locally.sh
+          pushd examples/basic_bls_signing/rust
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
-  examples-basic-bls-signing-linux:
+  examples-basic-bls-signing-rust-linux:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Provision Linux
         run: bash .github/workflows/provision-linux.sh
-      - name: Deploy Basic BLS Signing Linux
+      - name: Deploy Basic BLS Signing Rust Linux
         run: |
           set -eExuo pipefail
           cargo install candid-extractor
           npm i
-          pushd examples/basic_bls_signing
-          ./deploy_locally.sh
+          pushd examples/basic_bls_signing/rust
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-basic-bls-signing-motoko-darwin:
+    runs-on: macos-15
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Darwin
+        run: |
+          bash .github/workflows/provision-darwin.sh
+      - name: Deploy Basic BLS Signing Motoko Darwin
+        run: |
+          set -eExuo pipefail
+          cargo install candid-extractor
+          npm i
+          pushd examples/basic_bls_signing/motoko
+          dfx start --background && dfx deploy
+          cd frontend
+          npm run lint
+  examples-basic-bls-signing-motoko-linux:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Provision Linux
+        run: bash .github/workflows/provision-linux.sh
+      - name: Deploy Basic BLS Signing Motoko Linux
+        run: |
+          set -eExuo pipefail
+          cargo install candid-extractor
+          npm i
+          pushd examples/basic_bls_signing/motoko
+          dfx start --background && dfx deploy
           cd frontend
           npm run lint
