--- a/examples/basic_bls_signing/frontend/package.json
+++ b/examples/basic_bls_signing/frontend/package.json
@@ -5,14 +5,10 @@
     "type": "module",
     "scripts": {
         "dev": "npm run build:bindings && vite",
-        "build": "npm run build:bindings && npm run build:deps && tsc && vite build",
+        "build": "npm run build:bindings && tsc && vite build",
         "build:bindings": "cd scripts && ./gen_bindings.sh",
-        "build:deps": "cd ../../../frontend/ic_vetkeys && npm run build",
         "preview": "vite preview",
         "lint": "eslint"
-    },
-    "peerDependencies": {
-        "@dfinity/vetkeys": "^0.3.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.24.0",
@@ -27,6 +23,7 @@
     },
     "dependencies": {
         "@dfinity/auth-client": "^2.4.1",
-        "@dfinity/principal": "^2.4.1"
+        "@dfinity/principal": "^2.4.1",
+        "@dfinity/vetkeys": "^0.3.0"
     }
 }
