--- a/frontend/ic_vetkeys/package.json
+++ b/frontend/ic_vetkeys/package.json
@@ -68,6 +68,7 @@
         "@types/node": "^24.0.4",
         "@vitest/coverage-v8": "^3.0.5",
         "eslint": "^9.22",
+        "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.2.6",
         "fake-indexeddb": "^6.0.0",
         "happy-dom": "^18.0.1",
