test(key manager): CRP-2839 copy and adapt Rust unit tests to canister tests that are also used to test the Motoko canister (#191)

--- a/backend/rs/canisters/ic_vetkeys_manager_canister/Cargo.toml
+++ b/backend/rs/canisters/ic_vetkeys_manager_canister/Cargo.toml
@@ -21,6 +21,7 @@ ic-vetkeys = { path = "../../ic_vetkeys" }
 serde = { workspace = true }
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 ic-vetkeys-test-utils = { path = "../../ic_vetkeys_test_utils" }
 pocket-ic = { workspace = true }
 rand = { workspace = true }
